# polars_mhci_hmm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
codegen/: vendor_models.py
python/polars_mhci_hmm/: __init__.py
python/polars_mhci_hmm/models/: aole_f.npz  aotr_g.npz  atbe_b.npz  atbe_g.npz  atfu_b.npz  atfu_g.npz  background.npy  bogr_6.npz  bogr_nc1.npz  bogr_nc10.npz  bogr_nc9.npz  bola_1.npz  bola_2.npz  bola_3.npz  bola_4.npz  bola_5.npz  bola_6.npz  bola_nc1.npz  bola_nc10.npz  bola_nc2.npz  bola_nc3.npz  bola_nc5.npz  bola_nc6.npz  bola_nc9.npz  caja_b.npz  caja_b1.npz  caja_b3.npz  caja_b4.npz  caja_b6.npz  caja_b7.npz  caja_f1.npz  caja_f4.npz  caja_f6.npz  caja_f7.npz  caja_g.npz  ceat_a1.npz  ceat_aw1.npz  ceat_aw2.npz  ceat_b.npz  ceat_e.npz  (+211 more)
src/: classify.rs  expressions.rs  hmm.rs  lib.rs  models.rs  npy.rs
tests/: conftest.py  test_edge_cases.py  test_golden.py  test_parity.py  test_polars.py
tests/data/: golden.json  mhci_sequences.json
tools/: make_golden.py  make_test_data.py  validate.py
