[package]
name = "polars-mhci-hmm"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Polars expression plugin for MHC Class I profile-HMM classification"

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.54.4", default-features = false, features = ["dtype-struct"] }
polars-arrow = "0.54.4"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
